--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,10 +1,10 @@
-trigger:
-  - main
-
 pool:
   vmImage: "ubuntu-latest"
 
 steps:
-  - checkout: none
-  - script: echo Hello, World!
-    displayName: "Run a one-line script"
+  - checkout: self
+  - script: |
+      pip install -r requirements.txt
+      pip install pytest
+      pytest
+    displayName: "Run tests"
