Update ci-python.yaml for Azure Pipelines

--- a/aula_3/ci-python.yaml
+++ b/aula_3/ci-python.yaml
@@ -12,3 +12,8 @@ steps:
       addToPath: true
       architecture: "x64"
 ## requirements, pylint, pytest
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'NUnit'
+      testResultsFiles: '**/TEST-*.xml'
+      mergeTestResults: true
