--- a/projeto/kubernetes/deploy-app.yaml
+++ b/projeto/kubernetes/deploy-app.yaml
@@ -10,7 +10,7 @@
 #    port: 6000
 #    targetPort: web
 #  type: ClusterIP
----
+#---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -33,11 +33,8 @@ spec:
       - name: consumer
         image: linconln/consumer:1
         imagePullPolicy: Always
-#        ports:
-#        - containerPort: 5000
-#          name: web
-#        command:
-#        - python
-#        args:
-#         - producer.py
+        command:
+        - python
+        args:
+        - producer.py
 
