--- a/projeto/kubernetes/service-rabbit.yaml
+++ b/projeto/kubernetes/service-rabbit.yaml
@@ -9,6 +9,10 @@ spec:
   - port: 5672
     protocol: TCP
     targetPort: 5672
+    name: p5672
+  - port: 15672
+    targetPort: 15672
+    name: p15672
   selector:
     app: rabbit
 status:
